docs: update README

--- a/README.rmd
+++ b/README.rmd
@@ -53,6 +53,10 @@ For documentation and tutorials, please check our website at [https://core.dymiu
 
 Please visit [dymium-org/dymiumModules](https://github.com/dymium-org/dymiumModules) to see the available modules.
 
+## An example project
+
+We have recently setup an example project so that you can see our package in action! Please visit [dymium-org/dymiumExampleProject](https://github.com/dymium-org/dymiumExampleProject) to learn more about it.
+
 ## Collaboration
 
 We are open to collaboration on this project. If you are interested, please email us at amarin at dymium.org.
